[package]
name = "ycsb-pocf"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sgx_no_verify = ["sgx"]
sev = ["pobf_crypto/sev"]
sgx = ["pobf_crypto/sgx", "sgx_types", "sgx_urts"]

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
pobf_crypto = { git = "https://github.com/hiroki-chen/pobf_crypto.git", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_types", optional = true }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_urts", optional = true }
spin = "0.9.8"
